--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/randomBrainstormer/MMM-GoogleCalendar.git
 [submodule "modules/MMM-GoogleCalendar"]
 	path = modules/MMM-GoogleCalendar
-	url = https://github.com/randomBrainstormer/MMM-GoogleCalendar.git
+	url = https://github.com/randomBrainstormer/MMM-GoogleCalendar
 [submodule "modules/MMM-KeyBindings"]
 	path = modules/MMM-KeyBindings
 	url = https://github.com/shbatm/MMM-KeyBindings.git
